[package]
name = "async-oneshot"
version = "0.6.0"
description = "A fast, small, full-featured, async-aware oneshot channel."
keywords = ["oneshot", "channel"]
categories = ["asynchronous", "concurrency", "data-structures", "no-std"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/async-oneshot"
repository = "https://github.com/irrustible/async-oneshot"
documentation = "https://docs.rs/async-oneshot"
license = "MPL-2.0"
edition = "2021"
readme = "README.md"

[dev-dependencies]
futures = "0.3.29"
waker-fn = "1"
criterion = { version = "0.5.1", features = ["real_blackbox"] }

[[bench]]
name = "oneshot"
harness = false
